testsuite/poke.pkl/field-init-diag-2.pk
/* { dg-do compile } */

type Foo = struct { int[2] a = [1,2,3]; }; /* { dg-error "invalid.*\n.*expected.*" } */
